--- a/工程化/自动化构建系统/gulp/实战/package.json
+++ b/工程化/自动化构建系统/gulp/实战/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "gulp-combat",
+  "name": "gulp-panda",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "clean": "gulp clean",
-    "build": "gulp build",
-    "develop": "gulp develop"
+  "main": "lib/index.js",
+  "bin": {
+    "gulp-panda": "./bin/gulp-panda.js"
   },
+  "license": "MIT",
+  "scripts": {},
+  "files": [
+    "lib",
+    "bin"
+  ],
   "devDependencies": {
+    "lodash": "^4.17.15"
+  },
+  "dependencies": {
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "browser-sync": "^2.26.7",
