--- a/工程化/模块化/webpack/package.json
+++ b/工程化/模块化/webpack/package.json
@@ -3,15 +3,30 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "yarn webpack",
+    "dev": "yarn webpack-dev-server --open"
+  },
   "devDependencies": {
     "@babel/core": "^7.7.5",
     "@babel/preset-env": "^7.7.6",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.2.1",
     "file-loader": "^5.0.2",
+    "html-webpack-plugin": "^3.2.0",
+    "marked": "^0.8.0",
     "style-loader": "^1.0.1",
     "url-loader": "^3.0.0",
+    "vue-loader": "^15.8.3",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1",
+    "webpack-merge": "^4.2.2"
+  },
+  "dependencies": {
+    "vue": "^2.6.11",
+    "vue-template-compiler": "^2.6.11"
   }
 }
