--- a/工程化/模块化/webpack/package.json
+++ b/工程化/模块化/webpack/package.json
@@ -17,6 +17,8 @@
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "marked": "^0.8.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "style-loader": "^1.0.1",
     "url-loader": "^3.0.0",
     "vue-loader": "^15.8.3",
