--- a/javascript进阶/进阶实例/package.json
+++ b/javascript进阶/进阶实例/package.json
@@ -5,5 +5,10 @@
   "license": "MIT",
   "devDependencies": {
     "nodemon": "^2.0.2"
+  },
+  "dependencies": {
+    "cookie-parser": "^1.4.4",
+    "express": "^4.17.1",
+    "mongoose": "^5.8.9"
   }
 }
